// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PagedList Should calls handleRefresh on refresh 1`] = `
<RCTScrollView
  ListFooterComponent={
    <PagedListFooter
      isLoading={true}
    />
  }
  data={
    [
      {
        "id": 1,
        "name": "Item 1",
      },
      {
        "id": 2,
        "name": "Item 2",
      },
      {
        "id": 3,
        "name": "Item 3",
      },
      {
        "id": 4,
        "name": "Item 4",
      },
      {
        "id": 5,
        "name": "Item 5",
      },
      {
        "id": 6,
        "name": "Item 6",
      },
      {
        "id": 7,
        "name": "Item 7",
      },
      {
        "id": 8,
        "name": "Item 8",
      },
      {
        "id": 9,
        "name": "Item 9",
      },
      {
        "id": 10,
        "name": "Item 10",
      },
      {
        "id": 11,
        "name": "Item 11",
      },
      {
        "id": 12,
        "name": "Item 12",
      },
      {
        "id": 13,
        "name": "Item 13",
      },
      {
        "id": 14,
        "name": "Item 14",
      },
      {
        "id": 15,
        "name": "Item 15",
      },
      {
        "id": 16,
        "name": "Item 16",
      },
      {
        "id": 17,
        "name": "Item 17",
      },
      {
        "id": 18,
        "name": "Item 18",
      },
      {
        "id": 19,
        "name": "Item 19",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={0.5}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControl
      onRefresh={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  testID="my-PagedList"
  viewabilityConfigCallbackPairs={[]}
>
  <RCTRefreshControl />
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 1
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 2
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 3
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 4
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 5
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 6
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 7
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 8
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 9
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 10
      </Text>
    </View>
    <View
      style={
        {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingVertical": 8,
            },
          ]
        }
      >
        <ActivityIndicator
          animating={true}
          color="#312B78"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PagedList should Verify after user behave scroll to bottom trigger fetchNextPageMock, add new items to Pagedlist and verify items now are visible on the screen 1`] = `
<RCTScrollView
  ListFooterComponent={
    <PagedListFooter
      isLoading={true}
    />
  }
  data={
    [
      1,
      2,
      3,
      4,
      5,
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={0.5}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControl
      onRefresh={[MockFunction]}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  testID="page-list"
  viewabilityConfigCallbackPairs={[]}
>
  <RCTRefreshControl />
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        2
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        3
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        4
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        5
      </Text>
    </View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingVertical": 8,
            },
          ]
        }
      >
        <ActivityIndicator
          animating={true}
          color="#312B78"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PagedList should not render items when items are not visible in the screen 1`] = `
<RCTScrollView
  ListFooterComponent={
    <PagedListFooter
      isLoading={true}
    />
  }
  data={
    [
      {
        "id": 1,
        "name": "Item 1",
      },
      {
        "id": 2,
        "name": "Item 2",
      },
      {
        "id": 3,
        "name": "Item 3",
      },
      {
        "id": 4,
        "name": "Item 4",
      },
      {
        "id": 5,
        "name": "Item 5",
      },
      {
        "id": 6,
        "name": "Item 6",
      },
      {
        "id": 7,
        "name": "Item 7",
      },
      {
        "id": 8,
        "name": "Item 8",
      },
      {
        "id": 9,
        "name": "Item 9",
      },
      {
        "id": 10,
        "name": "Item 10",
      },
      {
        "id": 11,
        "name": "Item 11",
      },
      {
        "id": 12,
        "name": "Item 12",
      },
      {
        "id": 13,
        "name": "Item 13",
      },
      {
        "id": 14,
        "name": "Item 14",
      },
      {
        "id": 15,
        "name": "Item 15",
      },
      {
        "id": 16,
        "name": "Item 16",
      },
      {
        "id": 17,
        "name": "Item 17",
      },
      {
        "id": 18,
        "name": "Item 18",
      },
      {
        "id": 19,
        "name": "Item 19",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={0.5}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControl
      onRefresh={[MockFunction]}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  testID="my-PagedList"
  viewabilityConfigCallbackPairs={[]}
>
  <RCTRefreshControl />
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 1
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 2
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 3
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 4
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 5
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 6
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 7
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 8
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 9
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 10
      </Text>
    </View>
    <View
      style={
        {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingVertical": 8,
            },
          ]
        }
      >
        <ActivityIndicator
          animating={true}
          color="#312B78"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PagedList should render the correct list data and the first item passed to ‘data’ is visible on the screen 1`] = `
<RCTScrollView
  ListFooterComponent={
    <PagedListFooter
      isLoading={true}
    />
  }
  data={
    [
      {
        "id": 1,
        "name": "Item 1",
      },
      {
        "id": 2,
        "name": "Item 2",
      },
      {
        "id": 3,
        "name": "Item 3",
      },
      {
        "id": 4,
        "name": "Item 4",
      },
      {
        "id": 5,
        "name": "Item 5",
      },
      {
        "id": 6,
        "name": "Item 6",
      },
      {
        "id": 7,
        "name": "Item 7",
      },
      {
        "id": 8,
        "name": "Item 8",
      },
      {
        "id": 9,
        "name": "Item 9",
      },
      {
        "id": 10,
        "name": "Item 10",
      },
      {
        "id": 11,
        "name": "Item 11",
      },
      {
        "id": 12,
        "name": "Item 12",
      },
      {
        "id": 13,
        "name": "Item 13",
      },
      {
        "id": 14,
        "name": "Item 14",
      },
      {
        "id": 15,
        "name": "Item 15",
      },
      {
        "id": 16,
        "name": "Item 16",
      },
      {
        "id": 17,
        "name": "Item 17",
      },
      {
        "id": 18,
        "name": "Item 18",
      },
      {
        "id": 19,
        "name": "Item 19",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={0.5}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControl
      onRefresh={[MockFunction]}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  testID="my-PagedList"
  viewabilityConfigCallbackPairs={[]}
>
  <RCTRefreshControl />
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 1
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 2
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 3
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 4
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 5
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 6
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 7
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 8
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 9
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        Item 10
      </Text>
    </View>
    <View
      style={
        {
          "height": 0,
        }
      }
    />
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingVertical": 8,
            },
          ]
        }
      >
        <ActivityIndicator
          animating={true}
          color="#312B78"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PagedList should verify user behave scroll to bottom, after the user has stopped scrolling the list with their finger will trigger onMomentumScrollEnd and after that will be trigger fetchNextPageMock  1`] = `
<RCTScrollView
  ListFooterComponent={
    <PagedListFooter
      isLoading={true}
    />
  }
  data={
    [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onEndReachedThreshold={0.5}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControl
      onRefresh={[MockFunction]}
    />
  }
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  testID="page-list"
  viewabilityConfigCallbackPairs={[]}
>
  <RCTRefreshControl />
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        2
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        3
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        4
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        5
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        6
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        7
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        8
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        9
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          [
            {
              "color": "#211C4E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 22,
            },
          ]
        }
      >
        10
      </Text>
    </View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingVertical": 8,
            },
          ]
        }
      >
        <ActivityIndicator
          animating={true}
          color="#312B78"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;
